--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html{
+html {
   font-size: 2.5vh;
 }
 :root {
@@ -7,7 +7,7 @@ html{
   --baloo-bhai: "Baloo Bhai 2", cursive;
   --login-color: #3c415c;
 }
- /**/
+/**/
 
 /* CSS Reset */
 * {
@@ -15,15 +15,14 @@ html{
   padding: 0px;
   box-sizing: border-box;
   outline: none;
-  border : none;
-  /* border: 2px solid white; */
-
+  border: none;
+  /* border: 1px solid white; */
 }
 body {
   display: block;
   margin: 0px;
   padding: 0px;
-  background: url(/1.jpg) no-repeat center center/cover ;
+  background: url(/1.jpg) no-repeat center center/cover;
   /* position:fixed; */
   background-attachment: fixed;
   /* background-repeat: no-repeat; */
@@ -144,7 +143,7 @@ header {
   padding: 5px;
   border: 2px solid transparent;
   width: 287px;
-  height: 300px;
+  /* height: 300px; */
   color: white;
   overflow: auto;
   float: left;
@@ -177,10 +176,11 @@ header {
 } */
 
 .price {
-  display: inline-block;
-  width: 70px;
+  display: block;
+  /* width: 70px; */
   margin-top: 10px;
   margin-left: 30px;
+  float: left;
 
   font-size: 20px;
   color: rgb(202, 197, 197);
@@ -199,7 +199,7 @@ header {
   border-radius: 4px;
   background-color: transparent;
   float: right;
-  margin: 5px 10px 5px 5px;
+  margin: 7px 10px 5px 5px;
   padding: 3px;
   cursor: pointer;
 }
@@ -219,9 +219,8 @@ header {
   padding: 2.5px;
 }
 
-.product .product-cart{
-  
-  position :relative;
+.product .product-cart {
+  position: relative;
   right: 7px;
   color: rgb(202, 197, 197);
   border-radius: 4px;
@@ -229,12 +228,10 @@ header {
   float: right;
   margin: 10px 10px 5px 5px;
   cursor: pointer;
-  
 }
-.product .product-cart:focus{
+.product .product-cart:focus {
   transform: translateY(-2px);
 }
-
 
 /*//////////////////// CARTPAGE//////////////////// */
 #cartpage {
@@ -293,7 +290,7 @@ header {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 
 .cartbox-head {
@@ -330,7 +327,7 @@ header {
 .cartbox li:nth-child(1) {
   width: 50%;
 }
-#cart-items{
+#cart-items {
   display: flex;
   flex-direction: column;
   width: 99%;
@@ -346,19 +343,17 @@ header {
   justify-content: space-around;
   transition-property: border;
   transition-duration: 0.3s;
-  padding:5px 10px
+  padding: 5px 10px;
 }
-.product-info{
-  display:flex;
-  width:50%;
+.product-info {
+  display: flex;
+  width: 50%;
   justify-content: space-between;
-  
 }
-.price-info{
-  display:flex;
-  width:25%;
+.price-info {
+  display: flex;
+  width: 25%;
   justify-content: space-around;
-  
 }
 .cart-item:hover {
   border-left: 2px solid var(--cartpage-color);
@@ -441,7 +436,7 @@ header {
 }
 /* .cart-item:hover .cart-item-remove {
   /* visibility: visible; */
-/* } */ 
+/* } */
 
 .cart-item:hover .cart-item-remove:hover {
   transform: translateY(-2px);
@@ -459,20 +454,20 @@ header {
   /* outline:none; */
 }
 
-.hr{
-  border:1px solid var(--text-color);
-  height:0;
+.hr {
+  border: 1px solid var(--text-color);
+  height: 0;
   border-radius: 10px;
 }
 .cart-total-bar {
   display: flex;
-  width: 92%;
+  width: 95%;
   font-family: "Ubuntu Mono", monospace;
   margin-top: 10px;
   justify-content: space-between;
 }
 .cart-total {
-  margin-left: 50px;
+  /* margin-left: 50px; */
 
   width: 150px;
   font-size: 2rem;
@@ -487,7 +482,7 @@ header {
   padding-left: 50%;
   text-align: center;
 }
-.cart-add-more{
+.cart-add-more {
   margin-top: 10px;
   float: right;
   margin-right: 50px;
@@ -498,10 +493,9 @@ header {
   border: 2px solid;
   padding: 5px;
   border-radius: 10px;
-  
 }
 
-.cart-add-more:hover{
+.cart-add-more:hover {
   transform: scale(1.02);
   color: white;
 }
@@ -538,7 +532,7 @@ header {
   display: none;
   width: 100%;
   padding-bottom: 20pxpx;
-  z-index:2;
+  z-index: 2;
   /* height: 100vh; */
 }
 
@@ -615,7 +609,7 @@ header {
   /* border: 2px solid white; */
   /* border-radius: 10px; */
   color: white;
-  font-size:4.6rem ;
+  font-size: 4.6rem;
   /* text-align: center; */
 
   position: relative;
@@ -657,28 +651,26 @@ header {
   margin-top: 70px;
 }
 
-.login-welcome-content .sign-up{
+.login-welcome-content .sign-up {
   margin-top: 40px;
   font-size: 20px;
 }
 
-.login-welcome-content button{
+.login-welcome-content button {
   background-color: transparent;
-  color:var(--text-color);
+  color: var(--text-color);
   background-color: rgba(21, 124, 76, 0.596);
   border: 2px solid var(--text-color);
   border-radius: 7px;
-  padding:5px;
+  padding: 5px;
   font-size: 20px;
   cursor: pointer;
 }
 
-.login-welcome-content button:focus{
-  outline:none;
+.login-welcome-content button:focus {
+  outline: none;
   transform: scale(1.02);
-
 }
-
 
 .login-box {
   display: flex;
@@ -747,7 +739,7 @@ header {
   transition-duration: 0.3s;
 }
 
-.login-box .login-btn{
+.login-box .login-btn {
   margin: 10px 5px;
   margin-top: 60px;
   padding: 5px;
@@ -765,10 +757,10 @@ header {
   transition-duration: 5s;
   cursor: pointer;
 }
-.login-box input:hover,.login-box .login-btn:hover{
+.login-box input:hover,
+.login-box .login-btn:hover {
   transform: scale(1.03);
   box-shadow: 2px 2px 10px var(--text-color);
-
 }
 
 .login-box input:focus,
@@ -779,60 +771,62 @@ header {
 .login-box .login-btn:focus {
   transform: translateY(-2px);
 }
-@media (max-width:820px){
+@media (max-width: 820px) {
   /* .cart-item-img{
     display: none;
   } */
-  .product-info{
-
+  .product-info {
     flex-direction: column;
     align-items: center;
+    border: 0.5px solid var(--cartpage-color);
+    border-style: groove;
+    border-radius: 20px;
   }
-  .cart-item{
-    height:250px
+  .cart-item {
+    height: 250px;
   }
-  .cart-item-img{
-    width:200px;
-    height:120px;
+  .cart-item-img {
+    width: 200px;
+    height: 120px;
+    justify-content: left;
   }
-  .cart-item-name{
+  .cart-item-name {
     width: 99%;
     display: block;
     /* color:white; */
   }
-  .login-container{
+  .login-container {
     flex-direction: column;
   }
-
 
   .login-welcome::before {
     width: 89vw;
     border-top-left-radius: 23px;
     border-top-right-radius: 23px;
-    border-bottom-left-radius: 0px ;
+    border-bottom-left-radius: 0px;
   }
 
-  .login-welcome-content{
-    margin:25px;
+  .login-welcome-content {
+    margin: 25px;
   }
 
-  .login-box{
+  .login-box {
     border-top-right-radius: 0px;
     border-bottom-left-radius: 13px;
   }
 }
 
-@media( max-width : 550px){
-  .price-info{
+@media (max-width: 550px) {
+  .price-info {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
   }
-  .cart-item-img{
-    width:150px;
-    height:100px;
+  .cart-item-img {
+    width: 150px;
+    height: 100px;
   }
   .cartbox ul {
-    padding-right:20px
+    padding-right: 20px;
   }
 }
