--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ body {
   overflow-x: hidden;
 }
 
+.hidden { 
+  display: none;
+}
 /* ///////////////////HOMEPAGE ///////////////////////  */
 #homepage {
   /* display: none; */
@@ -235,7 +238,7 @@ header {
 
 /*//////////////////// CARTPAGE//////////////////// */
 #cartpage {
-  display: none;
+  /* display: none; */
   width: 100vw;
   padding-bottom: 150px;
   /* height: 100vh; */
@@ -529,7 +532,7 @@ header {
 /* ////////////// LOGIN PAGE ///////////////// */
 
 #login-page {
-  display: none;
+  /* display: none; */
   width: 100%;
   padding-bottom: 20pxpx;
   z-index: 2;
