--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header {
   /* overflow: auto; */
   width: 100%;
   margin: 0px;
+  /* box-shadow:2px 0px 5px var(--text-color) ; */
   /* float: left; */
 }
 .name-logo {
@@ -79,11 +80,16 @@ header {
 .login {
   float: right;
   font-family: "Baloo Bhai 2", cursive;
-  font-size: 20px;
-  margin-top: 10px;
-  background-color: transparent;
+  color: rgb(224, 224, 224);
+  font-size: 1.8rem;
+  margin: .9rem .4rem;
+  padding : 1px 7px;
+  background-color: var(--login-color);
   border: none;
+  border-radius: 5px;;
   cursor: pointer;
+  font-weight: bold;
+  
 }
 .cart {
   margin-right: 20px;
@@ -118,7 +124,7 @@ header {
   /* float: left; */
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 20px;
+  font-size: 1.65rem;
   position: relative;
   font-family: "Baloo Bhai 2", cursive;
   color: rgb(182, 152, 152);
@@ -395,12 +401,14 @@ header {
   text-shadow: 2px 2px transparent;
 }
 
+
+
 .cart-item-price,
 .cart-item-total-price {
   color: var(--cartpage-color);
   /* border: 2px solid black; */
   display: flex;
-  width: 150px;
+  width: 6.62rem;
   justify-content: center;
   align-items: center;
   font-size: 1.5rem;
@@ -409,19 +417,34 @@ header {
 
 .cartbox .cart-item-qty {
   /* color: var(--cartpage-color); */
+  /* grid-area: quantity; */
   height: 30px;
-  width: 70px;
-  margin: 85px 0px 75px 0px;
+  width: 7vw;
+ 
   border-radius: 5px;
   font-weight: bolder;
   background-color: var(--cartpage-color);
-  border: 2px solid var(--cartpage-color);
+  /* border: 2px solid var(--cartpage-color); */
+  text-align: center;
+  /* transform: translate(-50%, -30%); */
   /* transition: height 5s ease-in-out; */
 }
 
-.cartbox select[name="Quantity"]:focus {
+/* .cartbox .cart-item-qty-apply {
+  grid-area:apply;
+  color:var(--login-color);
+  width: 30px;
+  padding: 5px;
+  font-size: 13px;
+  cursor: pointer;
+} */
+/* .cartbox .cart-item-qty-apply:active {
+  transform: scale(1.05);
+} */
+
+/* .cartbox select[name="Quantity"]:focus {
   outline: none;
-}
+} */
 .cart-item-remove {
   display: none;
   background-color: transparent;
