--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ header {
   justify-content: center;
 }
 
-.navbar a {
+.navbar button {
   /* float: left; */
   padding-left: 15px;
   padding-right: 15px;
@@ -131,9 +131,11 @@ header {
   /* color:rgb(202, 197, 197); */
   text-decoration: none;
   text-align: center;
+  background: transparent;
+  cursor: pointer;
 }
 
-.navbar a:hover {
+.navbar button:hover {
   font-size: 21px;
   color: white;
 }
@@ -604,7 +606,7 @@ header {
   justify-content: center;
 }
 
-.login-navbar a {
+.login-navbar button {
   /* float: left; */
   padding-left: 15px;
   padding-right: 15px;
@@ -615,9 +617,10 @@ header {
   /* color:rgb(202, 197, 197); */
   text-decoration: none;
   text-align: center;
+  background: transparent;
 }
 
-.login-navbar a:hover {
+.login-navbar button:hover {
   font-size: 21px;
   color: white;
 }
@@ -801,6 +804,170 @@ header {
 .login-box .login-btn:focus {
   transform: translateY(-2px);
 }
+
+
+/* ////////////// ABOUT US PAGE ///////////////// */
+
+.modal{
+  position: absolute;
+  top: 5%;
+  left:5%;
+  width: 90vw;
+  height: 90vh;
+  color: var(--text-color);
+  text-align: center;
+  border-radius: 23px;
+  padding:12px;
+  background-color:#424242ec ;
+  z-index: 10;
+  font-family: "Ubuntu Mono", monospace;
+  backdrop-filter: blur(2px);
+  box-shadow: 0px 0px 5px var(--text-color);
+  transition: .5s;
+}
+
+.modal h1 {
+  font-size: 4rem;
+  padding : 1.5rem;
+
+}
+
+.close-btn {
+  position: absolute;
+  top: 0px;
+  right: 2rem;
+  font-size: 3.8rem;
+  color: var(--text-color);
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.modal hr{
+  border:2px solid white;
+  border-radius: 5px;
+  margin: 10px
+}
+
+.about-content{
+  font-size: 2rem;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(5px);
+  z-index: 5;
+}
+
+/* ///////////////// Contact us page///////////// */
+
+#contact-us-page::before{
+  content: "";
+  text-align: left;
+  position: absolute;
+  top:0px;
+  width: 100%;
+  height: 50%;
+  opacity: 0.5;
+  background: url(/img/contact\ us.jpg) center center/cover;
+  transform: translate(-50%);
+  backdrop-filter: blur(1px);
+  z-index: -1;
+  border-top-left-radius: 23px;
+  border-top-right-radius: 23px;
+}
+
+#contact-us-page p {
+  font-size: 2rem;
+}
+#contact-us-page .customer-care {
+  position : absolute;
+  top:35%;
+  left:50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  width: 90vw;
+  height: 50%;
+  
+  /* border: 2px solid white; */
+
+}
+
+#contact-us-page .box{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width:40%;
+  margin:1rem;
+  /* border: 2px solid white; */
+  background-color: #77795267;
+  border-radius: 12px;
+  backdrop-filter: blur(7px);
+  cursor: pointer;
+  transition: transform .1s;
+  overflow:hidden;
+}
+
+#contact-us-page .box:hover{
+  transform: scale(1.05);
+}
+
+#contact-us-page .box img{
+  margin: 1rem;
+  /* border: 2px solid white; */
+  width : 70px;
+  
+}
+
+#contact-us-page .box .main {
+  margin : .5rem;
+  /* font-size: 1.8rem; */
+}
+#contact-us-page .box .sub {
+  margin : .5rem;
+  font-size: 1rem;
+  margin-top:1rem
+}
+
+#contact-us-page .social-media {
+  display: flex;
+  position: absolute;
+  bottom : 5%;
+  left:50%;
+  justify-content: space-around;
+  transform:translateX(-50%);
+  
+}
+
+#contact-us-page .social-media img{
+
+  width:3rem;
+  height:3rem;
+  margin: 0.5rem;
+  cursor: pointer;
+  transition: transform .1s;
+}
+
+#contact-us-page .social-media img:hover{
+  /* width:4rem; */
+  transform: translateY(-3px);
+}
+
+#contact-us-page .social-media img:last-child{
+  border-radius: 10px;
+}
+
+
+
+
+
 @media (max-width: 820px) {
   /* .cart-item-img{
     display: none;
@@ -860,3 +1027,4 @@ header {
     padding-right: 20px;
   }
 }
+
